[package]
name = "composefs"
version = "0.1.0"
edition = "2021"
description = "Rust library for the composefs filesystem"
keywords = ["composefs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/composefs"
rust-version = "1.70.0"
readme = "README.md"

[lib]
name = "composefs"
path = "src/lib.rs"

[features]
# Depend on 1.0.4 APIs
v1_0_4 = ["composefs-sys/v1_0_4"]

[dependencies]
anyhow = "1.0"
libc = "0.2"
composefs-sys = { version = "0.1.0", path = "../composefs-sys" }

[dev-dependencies]
tar = "0.4.38"
tempfile = "3.2.0"

[lints]
workspace = true
